SUMMON Change Log
-----------------


2007/8/29
- added fix for 64bit in HashTable.h:HashPointer()
- added get_bounding() to Model


2007/8/27 - summon-1.8.1
- small fix for SVG output


2007/8/25 - summon-1.8


2007/8/24
- cleaned up examples
- removed concept of group id
- created setup-macosx.py for Max OS X installation
- beginning to remove artifical requirement of groups
- uniform use of python-i


2007/8/17
- created foundation for a more pythonic model interface (merged cobject)
- bug in example/13_gameoflife.py


2007/7/11 - summon-1.7.2
More stability and more complete demos
- added features and fixed bugs for summatrix
- added features and fixed bugs for sumtree
- improved some example scripts
- added propper window closing callbacks in C++ module
- fixed race condition for multiwindow stacking
- fixed race condition for C++ timer and python shutdown
- Makefile cleanup
- fixes for cygwin compiling


2007/5/31
- added small edits to make OSX compilation go more smoothly
- trying out git for version control
- code cleanup
- fixed screen model support
- added first version of Heads Up Display (HUD)


2007/5/6 - summon-1.7
- fully implemented object-oriented API
- added extra functions for manipulating windows (names, position, size)
- fixed sumtree demo
- improve summatrix demo
- made source code fully compatible with Visual Studio 2005


2007/4/6
- fixed potential race condition


2007/4/5
- changed summon into an extension module for python
- removed Guile backend
- reorganized summon library
- added distutils setup.py
- removed requirements for readline, ncurses, pthread


2006/8/30 - summon-1.1
- fixed bugs 
- added text_clip


2005/8/26 - summon-1.0
- main features
    - embedded python engine
    - fast OpenGL graphics    
    - drawing arbitrary points, lines, polygons
    - binding inputs (keyboard, mouse, hotspots) to any python function 
    - SVG output (also PNG with ImageMagick)
    - cross-platform (windows, linux)
