@@ -14,21 +14,24 @@ namespace Summon {
 
 using namespace std;
 
-Scm Scm_UNSPECIFIED;
-Scm Scm_UNDEFINED;
+Scm Scm_NULL;
+Scm Scm_NONE;
 Scm Scm_EOL;
 Scm Scm_TRUE;
 Scm Scm_FALSE;
 
 PyObject *python_globals;
 
+static char *g_errorMsg = NULL;
+
+
 void InitPython()
 {
-    Scm_UNSPECIFIED = Py2Scm(Py_None);
-    Scm_UNDEFINED   = Py2Scm(Py_None);
-    Scm_TRUE        = Py2Scm(Py_True);
-    Scm_FALSE       = Py2Scm(Py_False);
-    Scm_EOL         = Py2ScmTake(PyTuple_New(0));
+    Scm_NULL  = Scm(NULL);
+    Scm_NONE  = Py2Scm(Py_None);
+    Scm_TRUE  = Py2Scm(Py_True);
+    Scm_FALSE = Py2Scm(Py_False);
+    Scm_EOL   = Py2ScmTake(PyTuple_New(0));
     
     python_globals = PyModule_GetDict(PyImport_AddModule("__main__"));
     Py_INCREF(python_globals);
@@ -37,6 +40,34 @@ void InitPython()
 void DestroyPython()
 {
     Py_DECREF(python_globals);
+}
+
+
+void Error(const char *format, ...)
+{
+    char text[500];
+    const int maxtext = 500;
+
+    va_list args;   
+    va_start(args, format);
+    
+    // set error message to global variable
+    vsnprintf(text, maxtext, format, args);
+    g_errorMsg = strdup(text);
+    
+    va_end(args);
+}
+
+
+char *GetError()
+{
+    return g_errorMsg;
+}
+
+void ClearError()
+{
+    free(g_errorMsg);
+    g_errorMsg = NULL;
 }
 
 
