@@ -13,7 +13,7 @@ enum {
     LOG3
 };
 
-void Error(const char *fmt, ...);
+
 void Log(int level, const char *fmt, ...);
 void PushStage(const char *stage);
 void PopStage();
